// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template snapshots > snapshots ESLint and React Doctor config 1`] = `
"import vitest from '@vitest/eslint-plugin';
import { defineConfig, globalIgnores } from 'eslint/config';
import nextVitals from 'eslint-config-next/core-web-vitals';
import nextTs from 'eslint-config-next/typescript';
import eslintConfigPrettier from 'eslint-config-prettier/flat';
import playwrightPlugin from 'eslint-plugin-playwright';
import reactDoctor from 'eslint-plugin-react-doctor';
import reactYouMightNotNeedAnEffect from 'eslint-plugin-react-you-might-not-need-an-effect';
import testingLibraryPlugin from 'eslint-plugin-testing-library';

const eslintConfig = defineConfig([
  ...nextVitals,
  ...nextTs,
  reactDoctor.configs.recommended,
  reactDoctor.configs.next,
  reactYouMightNotNeedAnEffect.configs.recommended,
  {
    // The \`import\` plugin is already registered by eslint-config-next; we only
    // add resolver settings and ordering rules here. Re-registering the plugin
    // breaks under pnpm's isolated node_modules ("Cannot redefine plugin import").
    files: ['**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    settings: {
      'import/resolver': {
        typescript: true,
        node: true,
      },
    },
    rules: {
      'import/order': [
        'error',
        {
          groups: ['builtin', 'external', 'internal', ['parent', 'sibling'], 'index', 'type'],
          'newlines-between': 'always',
          alphabetize: { order: 'asc', caseInsensitive: true },
        },
      ],
      'import/no-duplicates': 'error',
    },
  },
  {
    rules: {
      'no-console': ['error', { allow: ['warn', 'error'] }],
    },
  },
  {
    files: ['**/*.{jsx,tsx}'],
    rules: {
      'react-hooks/exhaustive-deps': 'error',
      'react/boolean-prop-naming': [
        'error',
        {
          rule: '^(is|should|has|can|did|will|as)[A-Z]([A-Za-z0-9]?)+',
          message:
            "Boolean props should start with 'is', 'should', 'has', 'can', 'did', 'will', or 'as'",
        },
      ],
    },
  },
  {
    files: ['**/*.{ts,tsx,mts,cts}'],
    languageOptions: {
      parserOptions: {
        project: './tsconfig.json',
      },
    },
    rules: {
      '@typescript-eslint/consistent-type-imports': [
        'error',
        {
          prefer: 'type-imports',
          fixStyle: 'inline-type-imports',
        },
      ],
      '@typescript-eslint/no-floating-promises': 'error',
      '@typescript-eslint/no-misused-promises': 'error',
    },
  },
  {
    files: [
      '**/*.{test,spec}.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'tests/unit/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'tests/integration/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
    ],
    ignores: ['tests/e2e/**', 'e2e/**', 'playwright/**'],
    plugins: vitest.configs.recommended.plugins,
    languageOptions: vitest.configs.env.languageOptions,
    rules: {
      ...vitest.configs.recommended.rules,
      'vitest/no-disabled-tests': 'warn',
      'vitest/no-focused-tests': 'error',
    },
  },
  {
    files: [
      '**/*.{test,spec}.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'tests/unit/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'tests/integration/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
    ],
    ignores: ['tests/e2e/**', 'e2e/**', 'playwright/**'],
    ...testingLibraryPlugin.configs['flat/react'],
  },
  {
    files: [
      'tests/e2e/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'e2e/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
      'playwright/**/*.{js,jsx,ts,tsx,mjs,mts,cjs,cts}',
    ],
    ...playwrightPlugin.configs['flat/recommended'],
  },
  eslintConfigPrettier,
  globalIgnores([
    '.next/**',
    'out/**',
    'build/**',
    'next-env.d.ts',
    '.agents/**',
    '.claude/**',
    // Generated shadcn/ui primitives are vendored (radix/cva imports, dual
    // exports). They are type-checked by tsc and formatted by Prettier, but
    // not linted. Mirrors the \`components/ui/**\` exemption in doctor.config.json.
    'components/ui/**',
    'coverage/**',
    'playwright-report/**',
    'test-results/**',
  ]),
]);

export default eslintConfig;
"
`;

exports[`template snapshots > snapshots ESLint and React Doctor config 2`] = `
"{
  "ignore": {
    "files": [".agents/**", ".claude/**", "components/ui/**"],
    "overrides": [
      {
        "files": ["lib/utils.ts"],
        "rules": ["deslop/unused-file", "knip/exports", "exports"]
      }
    ]
  }
}
"
`;

exports[`template snapshots > snapshots generated docs 1`] = `
"# Next Quality App

Next.js app scaffolded with strict quality tooling, shadcn, React Doctor, React Scan, agent docs, and Claude hooks.

## Development

\`\`\`bash
npm run dev
\`\`\`

## Quality

\`\`\`bash
npm run lint
npm run typecheck
npm run format:check
npm run test
npm run doctor
npm run check
\`\`\`

## Tooling

- Next.js App Router with TypeScript and Tailwind.
- shadcn UI initialized through the shadcn CLI.
- ESLint flat config with strict Next.js, React, import ordering, and Prettier integration.
- React Doctor and React Scan.
- Vitest and React Testing Library.
- Playwright E2E testing.
- Conventional commit linting.

## shadcn MCP

shadcn MCP setup was not run by default because some clients may update user-level tool config.

Manual setup commands for this package manager:

\`\`\`bash
npx shadcn@latest mcp init --client claude
npx shadcn@latest mcp init --client codex
npx shadcn@latest mcp init --client opencode
\`\`\`

Codex may require user-level configuration in \`~/.codex/config.toml\`:

\`\`\`toml
[mcp_servers.shadcn]
command = "npx"
args = ["shadcn@latest", "mcp"]
\`\`\`

## shadcn Presets

purrfold forwards additional shadcn CLI arguments, including official presets:

\`\`\`bash
npx purrfold@latest my-app --shadcn-args --preset b3REw8vwo --yes
npx purrfold@latest my-app --shadcn-args --preset b1sSLwZVp --yes
npx purrfold@latest my-app --shadcn-args --preset b2qMI9ufY --yes
npx purrfold@latest my-app --shadcn-args --preset b5eH0WVTX --yes
\`\`\`

## Agent Docs

- \`AGENTS.md\`: agent workflow and quality gates.
- \`DESIGN.md\`: generic UI/UX guardrails.
- \`.agents/skills\`: local and installed skills.
- \`CLAUDE.md\`: Claude Code pointer to \`AGENTS.md\`.
"
`;

exports[`template snapshots > snapshots generated docs 2`] = `
"# Design Standard

This file is the UI/UX source of truth for this app.

## Principles

- Build the actual product surface first; avoid marketing-only landing pages.
- Prefer dense, calm, scannable layouts for operational tools.
- Use semantic tokens from \`app/globals.css\`.
- Keep loading, empty, error, and partial-data states explicit.
- Make controls accessible, keyboard reachable, and clearly labeled.

## Components

- Use shadcn primitives before custom markup.
- Use lucide icons for icon buttons and provide accessible labels.
- Use tables for detailed records, cards for repeated metrics, and charts only when they answer a clear comparison question.
- Do not nest cards inside cards.

## Motion

- Use subtle transitions only when they clarify state.
- Respect reduced-motion preferences for non-trivial animation.
"
`;

exports[`template snapshots > snapshots generated docs 3`] = `
"<!-- BEGIN:nextjs-agent-rules -->

# This is NOT the Next.js you know

This project uses Next.js 16 or newer. APIs and conventions may differ from model memory. Read relevant guides in \`node_modules/next/dist/docs/\` before changing Next.js code.

<!-- END:nextjs-agent-rules -->

## Quality Gates

Run these before claiming implementation complete:

1. \`npm run lint\`
2. \`npm run typecheck\`
3. \`npm run format:check\`
4. \`npm run test\`
- Run \`npm run test:e2e\` when E2E behavior changed.
- \`npm run doctor\`
- \`npm run check\`

Do not use \`next lint\`; use the ESLint CLI.

## References

- Architecture and scripts: \`README.md\`
- Design rules: \`DESIGN.md\`
- Next.js reference docs: \`node_modules/next/dist/docs/\`
- Next.js agent rules: generated \`AGENTS.md\` / \`CLAUDE.md\`
- Next.js workflow skills: \`.agents/skills/next-cache-components-adoption/SKILL.md\`, \`.agents/skills/next-cache-components-optimizer/SKILL.md\`, and \`.agents/skills/next-dev-loop/SKILL.md\`
- If bundled Next.js docs are missing, run \`npx @next/codemod@canary agents-md\`.
- Minimum evaluation: \`.agents/skills/project-min-evaluation/SKILL.md\`
- Vitest guidance: \`.agents/skills/vitest/SKILL.md\`
- Playwright guidance: \`.agents/skills/playwright-best-practices/SKILL.md\`
- Commit messages are checked with commitlint.

## shadcn MCP

shadcn MCP setup is optional and was not run by default.

\`\`\`bash
npx shadcn@latest mcp init --client claude
npx shadcn@latest mcp init --client codex
npx shadcn@latest mcp init --client opencode
\`\`\`

For Codex, verify \`~/.codex/config.toml\` if MCP is not available:

\`\`\`toml
[mcp_servers.shadcn]
command = "npx"
args = ["shadcn@latest", "mcp"]
\`\`\`

shadcn presets are supported through \`--shadcn-args --preset <id>\`.

## Claude Code

\`CLAUDE.md\` points to this file. \`.claude/skills\` should link to \`.agents/skills\`.
"
`;

exports[`template snapshots > snapshots the generated app shell 1`] = `
"import { Geist, Geist_Mono } from 'next/font/google';
import Script from 'next/script';

import type { Metadata } from 'next';

import './globals.css';

const geistSans = Geist({
  variable: '--font-geist-sans',
  subsets: ['latin'],
});

const geistMono = Geist_Mono({
  variable: '--font-geist-mono',
  subsets: ['latin'],
});

export const metadata: Metadata = {
  title: 'My App',
  description: 'My App web application.',
};

export default function RootLayout({
  children,
}: Readonly<{
  children: React.ReactNode;
}>) {
  return (
    <html lang="en" className={\`\${geistSans.variable} \${geistMono.variable} h-full antialiased\`}>
      <body className="flex min-h-full flex-col">
        {process.env.NODE_ENV === 'development' && (
          <Script src="https://unpkg.com/react-scan/dist/auto.global.js" crossOrigin="anonymous" />
        )}
        {children}
      </body>
    </html>
  );
}
"
`;

exports[`template snapshots > snapshots the generated app shell 2`] = `
"import { Cat } from 'lucide-react';

import type { Metadata } from 'next';

export const metadata: Metadata = {
  title: 'My App',
  description: 'My App web application starting point.',
};

export default function Home() {
  return (
    <main className="bg-background text-foreground flex min-h-screen flex-col items-center justify-center gap-4 p-8 text-center">
      <Cat className="size-10 text-muted-foreground" aria-hidden />
      <h1 className="text-2xl font-semibold tracking-tight">My App</h1>
      <p className="text-muted-foreground text-sm">Edit app/page.tsx to start building.</p>
    </main>
  );
}
"
`;

exports[`template snapshots > snapshots workflows and Claude hooks 1`] = `
"name: Quality

on:
  push:
    branches:
      - '**'
  pull_request:

jobs:
  quality:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4


      - name: Setup Node
        uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: npm

      - name: Install dependencies
        run: npm ci

      - name: Run quality checks
        run: npm run check
"
`;

exports[`template snapshots > snapshots workflows and Claude hooks 2`] = `
"Set-StrictMode -Version Latest
$ErrorActionPreference = 'Stop'

$projectRoot = $env:CLAUDE_PROJECT_DIR
if ([string]::IsNullOrWhiteSpace($projectRoot)) {
  $projectRoot = Resolve-Path -LiteralPath (Join-Path $PSScriptRoot '..\\..')
}

Set-Location -LiteralPath $projectRoot

$reactDoctor = Join-Path $projectRoot 'node_modules\\.bin\\react-doctor.cmd'
if (Test-Path -LiteralPath $reactDoctor) {
  & cmd /c "\`"$reactDoctor\`" --verbose --diff --blocking warning --no-score"
  exit $LASTEXITCODE
}

& cmd /c 'npx --yes react-doctor@latest --verbose --diff --blocking warning --no-score'
exit $LASTEXITCODE
"
`;

exports[`template snapshots > snapshots workflows and Claude hooks 3`] = `
"Set-StrictMode -Version Latest
$ErrorActionPreference = 'Stop'

$projectRoot = $env:CLAUDE_PROJECT_DIR
if ([string]::IsNullOrWhiteSpace($projectRoot)) {
  $projectRoot = Resolve-Path -LiteralPath (Join-Path $PSScriptRoot '..\\..')
}

Set-Location -LiteralPath $projectRoot

$status = git status --porcelain
if ([string]::IsNullOrWhiteSpace(($status | Out-String))) {
  exit 0
}

$scripts = @('lint', 'typecheck', 'format:check', 'test', 'doctor', 'check')
foreach ($scriptName in $scripts) {
  & cmd /c "npm run $scriptName"
  if ($LASTEXITCODE -ne 0) {
    exit $LASTEXITCODE
  }
}
"
`;

exports[`template snapshots > snapshots workflows and Claude hooks 4`] = `
"{
  "hooks": {
    "PostToolBatch": [
      {
        "hooks": [
          {
            "type": "command",
            "command": "powershell -NoProfile -ExecutionPolicy Bypass -Command \\"& { $project = if ($env:CLAUDE_PROJECT_DIR) { $env:CLAUDE_PROJECT_DIR } else { (Get-Location).Path }; & (Join-Path $project '.claude/hooks/react-doctor.ps1') }\\""
          }
        ]
      }
    ],
    "Stop": [
      {
        "hooks": [
          {
            "type": "command",
            "command": "powershell -NoProfile -ExecutionPolicy Bypass -Command \\"& { $project = if ($env:CLAUDE_PROJECT_DIR) { $env:CLAUDE_PROJECT_DIR } else { (Get-Location).Path }; & (Join-Path $project '.claude/hooks/project-min-evaluation.ps1') }\\""
          }
        ]
      }
    ]
  }
}
"
`;
